--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,8 @@
     "\n",
     "#amount to update our variables for our next step\n",
     "\n",
-    "\n",
+    "update_to_b=0\n",
+    "update\n",
     "\n",
     "# Define the error_at function\n",
     "\n",
