--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,8 @@
     "update_to_m=0\n",
     "\n",
     "# Define the error_at function\n",
-    "\n",
+    "def error_at(point, b, m):\n",
+    "    return (point[0]- (m * point[1]  + b))\n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
