--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,13 @@
     }
    ],
    "source": [
+    "b = 0\n",
+    "m = 0\n",
+    "first_step = step_gradient(b, m, data) # {'b': 0.0085, 'm': 0.6249999999999999}\n",
     "\n",
+    "print(first_step[0])\n",
+    "print(first_step[1])\n",
+    "# b= 3.02503, m= 2.07286\n",
     "# b= 3.02503, m= 2.07286"
    ]
   },
