--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,9 @@
     }
    ],
    "source": [
-    "\n",
+    "updated_b = first_step[0]\n",
+    "updated_m = first_step[1]\n",
+    "step_gradient(updated_b, updated_m, data) \n",
     "# b = 5.63489, m= 3.902265"
    ]
   },
