--- a/index.ipynb
+++ b/index.ipynb
@@ -540,10 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = 0\n",
+    "m = [0,0]\n",
+    "iterations = []\n",
+    "for i in range(500):\n",
+    "    iteration = step_gradient(b, m, data)\n",
+    "    b= iteration[0]\n",
+    "    m = []\n",
+    "    for j in range(len(iteration)):\n",
+    "        m.append(iteration[1][j])\n",
+    "    iterations.append(iteration)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -568,7 +579,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "iterations[]"
+   ]
   },
   {
    "cell_type": "markdown",
