--- a/index.ipynb
+++ b/index.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -574,13 +574,13 @@
        "(1.944428332442866, array([2.995890, -3.911055]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iterations[]"
+    "iterations[499]"
    ]
   },
   {
